ECL 0.9h
========

* Design:

 - Simplified the structure of the frame stack, removing redundant fields.

 - Reworked the structure of the lexical environment to accelerate access to
   variables.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***